# mobile-arcade

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  railway.toml
api/cloudflare/: package.json  tsconfig.json  wrangler.toml
api/cloudflare/src/: index.ts
api/edge/: index.mjs  package.json
api/scripts/: cloudfront-bootstrap.sh  edge-signer-bootstrap.sh
api/src/: error.rs  main.rs  state.rs
api/src/jf/: board.rs  mod.rs  repo.rs  rng.rs  shapes.rs  solver.rs  stage_config.rs  types.rs
api/src/routes/: games.rs  health.rs  mod.rs
api/src/routes/jf/: event.rs  leaderboard.rs  mod.rs  stage_clear.rs  stage_leaderboard.rs  stage_tiles.rs
api/tests/: jf_stage_tiles.rs
knowledge/: CLAUDE.md  README.md  TASKS.md  architecture-decisions.md  decisions.md  progress.md  project-structure.md  requirements.md  user-preferences.md
prd/: CLAUDE.md  TASKS.md  all-in-hole.md  anipang3.md  anipang4.md  apple-game.md  arrows.md  block-away.md  block-blast.md  block-crush-flyfox.md  block-crush.md  block-puzzle.md  block-rush.md  block-triangle-tangram.md  blockdrop.md  blockpuzzle.md  blocky-quest.md  bloom-journey.md  blossom-match.md  brain-out.md  brain-puzzle-2.md  brain-puzzle.md  brainy-prankster.md  bridge-protocol.md  bus-escape.md  bus-jam.md  candy-friends.md  candy-pop-forest-match3.md  candypop.md  car-jam-solver.md  car-jam.md  car-match.md  car-out.md  chess.md  color-block-jam.md  color-block.md  (+99 more)
(+715 files in other folders)
