[package]
name = "arcade-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rand = { version = "0.10", features = ["std", "std_rng", "sys_rng"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
flate2 = "1"
base64 = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
